Fixed some UIs on mobile

--- a/client/src/pages/collection/collection.scss
+++ b/client/src/pages/collection/collection.scss
@@ -15,5 +15,11 @@
     & .collection-item {
       margin-bottom: 30px;
     }
+
+    @media screen and (max-width: 768px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+    }
   }
 }
